# swagger_output.json
@@ -191,6 +191,19 @@
           }
         }
       }
+    },
+    "/v1/role/getall": {
+      "get": {
+        "description": "",
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
     }
   }
 }
